srv/mediawiki/Deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mediawiki-mariadb
  labels:
    app: mediawiki-mariadb
spec:
  template:
    metadata:
      labels:
        app: mediawiki-mariadb
      annotations:
        pod.alpha.kubernetes.io/init-containers: '
          [
            {
              "name": "copy-custom-config",
              "image": "bitnami/mariadb:10.1.23-r2",
              "command": ["sh", "-c", "mkdir -p /bitnami/mariadb/conf && cp -n /bitnami/mariadb_config/my.cnf /bitnami/mariadb/conf/my_custom.cnf"],
              "volumeMounts": [
                {
                  "name": "config",
                  "mountPath": "/bitnami/mariadb_config"
                },
                {
                  "name": "data",
                  "mountPath": "/bitnami/mariadb"
                }
              ]
            }
          ]'
    spec:
      containers:
      - name: mediawiki-mariadb
        image: "bitnami/mariadb:10.1.23-r2"
        ports:
        - name: mysql
          containerPort: 3306
        livenessProbe:
          exec:
            command:
            - mysqladmin
            - ping
          initialDelaySeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - mysqladmin
            - ping
          initialDelaySeconds: 5
          timeoutSeconds: 1
        resources:
          requests:
            memory: 256Mi
            cpu: 250m
        volumeMounts:
        - name: data
          mountPath: /bitnami/mariadb
      volumes:
      - name: config
        configMap:
          name: mediawiki-mariadb
      - name: data
        persistentVolumeClaim:
          claimName: mediawiki-mariadb

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mediawiki-mediawiki
  labels:
    app: mediawiki-mediawiki
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mediawiki-mediawiki
    spec:
      containers:
      - name: mediawiki-mediawiki
        image: "bitnami/mediawiki:1.28.2-r1"
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 120
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          timeoutSeconds: 1
        resources:
          requests:
            memory: 512Mi
            cpu: 300m
        volumeMounts:
        - name: mediawiki-data
          mountPath: /bitnami/mediawiki
        - name: apache-data
          mountPath: /bitnami/apache
      volumes:
      - name: mediawiki-data
        persistentVolumeClaim:
          claimName: mediawiki-mediawiki
      - name: apache-data
        persistentVolumeClaim:
          claimName: mediawiki-apache
