srv/mediawiki/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mediawiki-mariadb
  labels:
    app: mediawiki-mariadb
spec:
  ports:
  - name: mysql
    port: 3306
    targetPort: mysql
  selector:
    app: mediawiki-mariadb

---
apiVersion: v1
kind: Service
metadata:
  name: mediawiki-mediawiki
  labels:
    app: mediawiki-mediawiki
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
  selector:
    app: mediawiki-mediawiki
